[project]
name = "ai-blog-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chainlit>=2.6.2",
    "langchain-core>=0.3.71",
    "langgraph>=0.5.4",
    "langsmith>=0.4.8",
    "mem0ai>=0.1.114",
    "pydantic>=2.11.7",
    "pydantic-ai>=0.4.6",
    "python-dotenv>=1.1.1",
    "tavily-python>=0.7.10",
]
