[project]
name = "ai-assistant"
version = "0.1.0"
description = "AI asiistant for blog writers"
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0.0"
dependencies = [
    "chainlit (>=2.6.2,<3.0.0)",
    "mem0ai (==0.1.101)",
    "langgraph (>=0.5.4,<0.6.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "langsmith (>=0.4.8,<0.5.0)",
    "pydantic-ai (>=0.4.6,<0.5.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "tavily-python (>=0.7.10,<0.8.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
